// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileCard > should hide the settings icon 1`] = `
<div>
  <div
    class="h-40 w-36 leading-tight sm:w-40"
  >
    <button
      class="css-1h3vw5n"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="mx-auto flex h-full flex-col items-center justify-center"
      >
        <div
          class="relative"
        >
          <div
            class="shrink-0 css-iou7f8"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="John Doe"
                class="h-20 w-20 rounded-full bg-cover bg-center bg-no-repeat object-cover"
                data-testid="ProfileAvatar__image"
                src="avatarImage"
                title="John Doe"
              />
            </div>
          </div>
        </div>
        <span
          class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
        >
          John Doe
        </span>
      </div>
      <div
        class="absolute -right-1 -top-1 m-4 flex items-center space-x-1"
      />
    </button>
  </div>
</div>
`;

exports[`ProfileCard > should render 1`] = `
<DocumentFragment>
  <div
    class="h-40 w-36 leading-tight sm:w-40"
  >
    <button
      class="css-1h3vw5n"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="mx-auto flex h-full flex-col items-center justify-center"
      >
        <div
          class="relative"
        >
          <div
            class="shrink-0 css-iou7f8"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="John Doe"
                data-testid="ProfileAvatar__svg"
                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="45" cx="80" cy="30" fill="rgb(76, 175, 80)"/><circle r="55" cx="0" cy="60" fill="rgb(255, 152, 0)"/><circle r="40" cx="50" cy="50" fill="rgb(3, 169, 244)"/></svg>"
                title="John Doe"
              />
              <span
                class="absolute font-semibold text-white"
              >
                JO
              </span>
            </div>
          </div>
        </div>
        <span
          class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
        >
          John Doe
        </span>
      </div>
      <div
        class="absolute -right-1 -top-1 m-4 flex items-center space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ProfileCard > should render the profile with avatar image 1`] = `
<DocumentFragment>
  <div
    class="h-40 w-36 leading-tight sm:w-40"
  >
    <button
      class="css-1h3vw5n"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="mx-auto flex h-full flex-col items-center justify-center"
      >
        <div
          class="relative"
        >
          <div
            class="shrink-0 css-iou7f8"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="John Doe"
                class="h-20 w-20 rounded-full bg-cover bg-center bg-no-repeat object-cover"
                data-testid="ProfileAvatar__image"
                src="avatarImage"
                title="John Doe"
              />
            </div>
          </div>
        </div>
        <span
          class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
        >
          John Doe
        </span>
      </div>
      <div
        class="absolute -right-1 -top-1 m-4 flex items-center space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ProfileCard > should render the settings icon 1`] = `
<div>
  <div
    class="h-40 w-36 leading-tight sm:w-40"
  >
    <button
      class="css-1h3vw5n"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="mx-auto flex h-full flex-col items-center justify-center"
      >
        <div
          class="relative"
        >
          <div
            class="shrink-0 css-iou7f8"
            data-testid="Avatar"
          >
            <div
              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
            >
              <img
                alt="John Doe"
                class="h-20 w-20 rounded-full bg-cover bg-center bg-no-repeat object-cover"
                data-testid="ProfileAvatar__image"
                src="avatarImage"
                title="John Doe"
              />
            </div>
          </div>
        </div>
        <span
          class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
        >
          John Doe
        </span>
      </div>
      <div
        class="absolute -right-1 -top-1 m-4 flex items-center space-x-1"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex w-4 justify-center overflow-hidden"
            >
              <div
                class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="ellipsis-vertical"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="16.994"
                      r="2.006"
                    />
                    <circle
                      cx="10"
                      cy="3"
                      r="2"
                    />
                    <circle
                      cx="10"
                      cy="10"
                      r="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;
